[metadata]
name = aio.api.github
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
maintainer = Ryan Northey
maintainer_email = ryan@synca.io
license = Apache Software License 2.0
url = https://github.com/envoyproxy/pytooling/tree/main/aio.api.github
description = Wrapper around gidgethub
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >=3.8
py_modules = aio.api.github
packages = find_namespace:
install_requires =
    abstracts>=0.0.12
    aio.core>=0.8.6
    aiohttp>=3.8.1
    gidgethub
    multidict>=6.0.2
    packaging
    yarl>=1.7.2

[options.extras_require]
test =
    pytest
    pytest-abstracts>=0.0.4
    pytest-asyncio
    pytest-coverage
    pytest-iters
    pytest-patches
lint = flake8
types =
    mypy
publish = wheel

[options.package_data]
* = py.typed

[options.packages.find]
include = aio.*
exclude =
    build.*
    tests.*
    dist.*
