[metadata]
name = envoy.base.utils
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
maintainer = Ryan Northey
maintainer_email = ryan@synca.io
license = Apache Software License 2.0
url = https://github.com/envoyproxy/pytooling/tree/main/envoy.base.utils
description = "A collection of utils used in Envoy proxy's CI"
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >=3.5
py_modules = envoy.base.utils
packages = find_namespace:
install_requires =
    abstracts>=0.0.12
    aio.core>=0.8.2
    aio.api.github>=0.1.1
    aio.run.runner>=0.3.2
    frozendict
    jinja2
    packaging
    pytz
    pyyaml
    trycast

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-coverage
    pytest-patches
lint = flake8
types =
    mypy
    types-pyyaml
    types-pytz
publish = wheel

[options.package_data]
* = py.typed

[options.entry_points]
console_scripts =
    envoy.project = envoy.base.utils:project_cmd
