[metadata]
name = envoy.base.utils
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
maintainer = Ryan Northey
maintainer_email = ryan@synca.io
license = Apache Software License 2.0
url = https://github.com/envoyproxy/toolshed/tree/main/envoy.base.utils
description = "A collection of utils used in Envoy proxy's CI"
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >=3.8
py_modules = envoy.base.utils
packages = find_namespace:
install_requires =
    abstracts>=0.0.12
    aio.core>=0.9.1
    aio.api.github>=0.2.5
    aio.run.runner>=0.3.3
    aiohttp>=3.8.1
    frozendict
    jinja2
    multidict>=6.0.2
    orjson
    packaging>=23.0
    protobuf
    pytz
    pyyaml
    trycast>=0.7.3
    yarl>=1.7.2
    zstandard

[options.extras_require]
test =
    pytest
    pytest-abstracts>=0.0.4
    pytest-asyncio
    pytest-coverage
    pytest-iters
    pytest-patches
lint = flake8
types =
    mypy
    types-frozendict
    types-orjson
    types-protobuf
    types-pyyaml
    types-pytz
publish = wheel

[options.package_data]
* = py.typed

[options.entry_points]
console_scripts =
    envoy.data_env = envoy.base.utils:data_env_cmd
    envoy.jinja_env = envoy.base.utils:jinja_env_cmd
    envoy.parallel = envoy.base.utils:parallel_cmd
    envoy.project = envoy.base.utils:project_cmd
    envoy.project_data = envoy.base.utils:project_data_cmd

[options.packages.find]
include = envoy.*
exclude =
    build.*
    tests.*
    dist.*
