[metadata]
name = envoy.dependency.check
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
maintainer = Ryan Northey
maintainer_email = ryan@synca.io
license = Apache Software License 2.0
url = https://github.com/envoyproxy/pytooling/tree/main/envoy.dependency.check
description = "Dependency checker used in Envoy proxy's CI"
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >=3.5
py_modules = envoy.dependency.check
packages = find_namespace:
install_requires =
    abstracts>=0.0.12
    aio.api.github>=0.0.5
    aio.api.nist
    aio.core>=0.8.1
    aio.run.checker>=0.5.1
    aiohttp
    envoy.base.utils>=0.1.0
    gidgethub
    jinja2
    packaging

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-coverage
    pytest-patches
lint = flake8
types =
    mypy
    mypy-abstracts
publish = wheel

[options.package_data]
* = py.typed

[options.entry_points]
console_scripts =
    envoy.dependency.check = envoy.dependency.check:run
