[metadata]
name = envoy.dependency.check
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
maintainer = Ryan Northey
maintainer_email = ryan@synca.io
license = Apache Software License 2.0
url = https://github.com/envoyproxy/toolshed/tree/main/envoy.dependency.check
description = "Dependency checker used in Envoy proxy's CI"
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >=3.8
py_modules = envoy.dependency.check
packages = find_namespace:
install_requires =
    abstracts>=0.0.12
    aio.api.github>=0.2.10
    aio.api.nist>=0.0.4
    aio.core>=0.10.5
    aio.run.checker>=0.5.8
    aiohttp>=3.8.1
    multidict>=6.0.2
    envoy.base.utils>=0.3.10
    gidgethub
    jinja2
    packaging
    yarl>=1.7.2

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-coverage
    pytest-iters
    pytest-patches
lint = flake8
types =
    mypy
    mypy-abstracts
publish = wheel

[options.package_data]
* = py.typed

[options.entry_points]
console_scripts =
    envoy.dependency.check = envoy.dependency.check:run

[options.packages.find]
include = envoy.*
exclude =
    build.*
    tests.*
    dist.*
