[metadata]
name = envoy.distribution.release
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
maintainer = Ryan Northey
maintainer_email = ryan@synca.io
license = Apache Software License 2.0
url = https://github.com/envoyproxy/toolshed/tree/main/envoy.distribution.release
description = "Release publishing tool used in Envoy proxy's CI"
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >=3.5
py_modules = envoy.distribution.release
packages = find_namespace:
install_requires =
    aio.run.runner>=0.3.4
    envoy.github.abstract>=0.0.22
    envoy.github.release>=0.0.14

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-coverage
    pytest-patches
lint = flake8
types =
    mypy
    mypy-abstracts>=0.0.4
publish = wheel

[options.package_data]
* = py.typed

[options.entry_points]
console_scripts =
    envoy.distribution.release = envoy.distribution.release:cmd
