[metadata]
name = envoy.docs.sphinx_runner
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
maintainer = Ryan Northey
maintainer_email = ryan@synca.io
license = Apache Software License 2.0
url = https://github.com/envoyproxy/pytooling/tree/main/envoy.docs.sphinx_runner
description = "Sphinx docs builder used in Envoy proxy's CI"
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >=3.5
py_modules = envoy.docs.sphinx_runner
packages = find_namespace:
install_requires =
    aio.run.runner>=0.3.3
    colorama
    docutils~=0.16.0
    envoy.base.utils>=0.3.9
    envoy.code.check>=0.3.5
    packaging>=23.0
    pygments>=2.11.1
    pyyaml
    sphinx
    sphinx-copybutton
    sphinx-rtd-theme
    sphinx-tabs
    sphinxcontrib-httpdomain
    sphinxcontrib-serializinghtml
    sphinxext-rediraffe

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-coverage
    pytest-patches
lint = flake8
types =
    mypy
    types-docutils
    types-pygments

publish = wheel

[options.package_data]
* = py.typed

[options.entry_points]
console_scripts =
    envoy.docs.sphinx_runner = envoy.docs.sphinx_runner:cmd
