[metadata]
name = envoy.docs.sphinx_runner
version = file: VERSION
author = Ryan Northey
author_email = ryan@synca.io
maintainer = Ryan Northey
maintainer_email = ryan@synca.io
license = Apache Software License 2.0
url = https://github.com/envoyproxy/toolshed/tree/main/envoy.docs.sphinx_runner
description = "Sphinx docs builder used in Envoy proxy's CI"
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License

[options]
python_requires = >=3.5
py_modules = envoy.docs.sphinx_runner
packages = find_namespace:
install_requires =
    aio.run.runner>=0.3.4
    colorama
    docutils~=0.19.0
    envoy.base.utils>=0.3.10
    packaging>=23.0
    pygments>=2.11.1
    pyyaml
    sphinx>=7.2.2
    sphinx-copybutton
    sphinx-rtd-theme>=2.0.0rc2
    # sphinx-tabs@https://github.com/phlax/sphinx-tabs/archive/338fda565dbf917650503b3cf0d35760f7fe07df.zip
    # sphinx-tabs>=3.4.1
    sphinxcontrib-jquery>=3.0.0
    sphinxcontrib-httpdomain
    sphinxcontrib-applehelp
    sphinxcontrib-devhelp
    sphinxcontrib-htmlhelp
    sphinxcontrib-qthelp
    sphinxcontrib-serializinghtml
    sphinxext-rediraffe

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-coverage
    pytest-patches
lint = flake8
types =
    mypy
    types-docutils
    types-pygments

publish = wheel

[options.entry_points]
console_scripts =
    envoy.docs.sphinx_runner = envoy.docs.sphinx_runner:cmd
